# qrc001-qrcode-next-generation

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  brainstorm-qr-code-next-generation.md  pyproject.toml
.claude/: notify.py
.claude/commands/: add-logging.md  project-setup-git-bare-bones.md  refactor.md  show.md
qrx/: __init__.py  art_qr.py  cli.py  datafont.py  generator.py  logging.py  logo.py  logo_qr.py  lumen.py  mosaic.py  shorturl.py  stegano.py  verify.py
